--- a/CPOA TD2/src/projet/FXML/ajoutproduit.fxml
+++ b/CPOA TD2/src/projet/FXML/ajoutproduit.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.202" xmlns:fx="http://javafx.com/fxml/1" fx:controller="projet.controleur.AjoutCategController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.202" xmlns:fx="http://javafx.com/fxml/1" fx:controller="projet.controleur.AjoutProduitController">
    <children>
       <VBox layoutX="1.0" layoutY="1.0" prefHeight="400.0" prefWidth="600.0">
          <children>
@@ -47,15 +47,15 @@
                      <GridPane.margin>
                         <Insets left="20.0" />
                      </GridPane.margin></Label>
-                  <TextField fx:id="TextFieldNomCateg" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyReleased="#keyReleasedProperty" prefHeight="26.0" prefWidth="170.0" GridPane.columnIndex="1" />
-                  <TextField fx:id="TextFieldTarifCateg" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyReleased="#keyReleasedProperty" prefHeight="26.0" prefWidth="78.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <TextArea fx:id="TextAreaDescCateg" onKeyReleased="#keyReleasedProperty" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <TextField fx:id="textFieldNomCateg" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyReleased="#keyReleasedProperty" prefHeight="26.0" prefWidth="170.0" GridPane.columnIndex="1" />
+                  <TextField fx:id="textFieldTarifCateg" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyReleased="#keyReleasedProperty" prefHeight="26.0" prefWidth="78.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <TextArea fx:id="textAreaDescCateg" onKeyReleased="#keyReleasedProperty" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                   <Label alignment="CENTER" text="euros à l'unité" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="2">
                      <GridPane.margin>
                         <Insets left="100.0" />
                      </GridPane.margin>
                   </Label>
-                  <ChoiceBox fx:id="ChoiceBoxCateg" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <ChoiceBox fx:id="choiceBoxCateg" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                </children>
                <VBox.margin>
                   <Insets />
@@ -63,12 +63,12 @@
             </GridPane>
             <FlowPane orientation="VERTICAL" prefHeight="125.0" prefWidth="600.0">
                <children>
-                  <Button fx:id="ButtonValider" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#MajLabelAffichage" prefHeight="25.0" prefWidth="80.0" text="Creer">
+                  <Button fx:id="buttonValider" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#majLabelAffichage" prefHeight="25.0" prefWidth="80.0" text="Creer">
                      <FlowPane.margin>
                         <Insets left="260.0" top="10.0" />
                      </FlowPane.margin>
                   </Button>
-                  <Label fx:id="LabelAffichage" text="Label d'affichage">
+                  <Label fx:id="labelAffichage" text="Label d'affichage">
                      <FlowPane.margin>
                         <Insets left="244.0" top="30.0" />
                      </FlowPane.margin>
