--- a/CPOA TD2/src/projet/FXML/ajoutclient.fxml
+++ b/CPOA TD2/src/projet/FXML/ajoutclient.fxml
@@ -17,9 +17,8 @@
          <children>
             <GridPane>
               <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="319.0" minWidth="10.0" prefWidth="313.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="244.0" minWidth="10.0" prefWidth="187.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
@@ -38,46 +37,73 @@
                      <padding>
                         <Insets left="20.0" />
                      </padding>
+                     <GridPane.margin>
+                        <Insets left="150.0" />
+                     </GridPane.margin>
                   </Label>
                   <Label text="Prenom" GridPane.rowIndex="1">
                      <padding>
                         <Insets left="20.0" />
                      </padding>
+                     <GridPane.margin>
+                        <Insets left="150.0" />
+                     </GridPane.margin>
                   </Label>
                   <Label text="Identifiant" GridPane.rowIndex="2">
                      <padding>
                         <Insets left="20.0" />
                      </padding>
+                     <GridPane.margin>
+                        <Insets left="150.0" />
+                     </GridPane.margin>
                   </Label>
                   <Label text="Mot de passe" GridPane.rowIndex="3">
                      <padding>
                         <Insets left="20.0" />
                      </padding>
+                     <GridPane.margin>
+                        <Insets left="150.0" />
+                     </GridPane.margin>
                   </Label>
-                  <Label text="Numero de maison" GridPane.rowIndex="4">
+                  <Label text="Numero de l'adresse" GridPane.rowIndex="4">
                      <padding>
                         <Insets left="20.0" />
                      </padding>
+                     <GridPane.margin>
+                        <Insets left="150.0" />
+                     </GridPane.margin>
                   </Label>
                   <Label text="Nom de la voie" GridPane.rowIndex="5">
                      <padding>
                         <Insets left="20.0" />
                      </padding>
+                     <GridPane.margin>
+                        <Insets left="150.0" />
+                     </GridPane.margin>
                   </Label>
                   <Label text="Code postal" GridPane.rowIndex="6">
                      <padding>
                         <Insets left="20.0" />
                      </padding>
+                     <GridPane.margin>
+                        <Insets left="150.0" />
+                     </GridPane.margin>
                   </Label>
-                  <Label text="VIlle" GridPane.rowIndex="7">
+                  <Label text="Ville" GridPane.rowIndex="7">
                      <padding>
                         <Insets left="20.0" />
                      </padding>
+                     <GridPane.margin>
+                        <Insets left="150.0" />
+                     </GridPane.margin>
                   </Label>
                   <Label text="Pays" GridPane.rowIndex="8">
                      <padding>
                         <Insets left="20.0" />
                      </padding>
+                     <GridPane.margin>
+                        <Insets left="150.0" />
+                     </GridPane.margin>
                   </Label>
                   <TextField fx:id="textFieldNomClient" onKeyReleased="#keyReleasedProperty" GridPane.columnIndex="1" />
                   <TextField fx:id="textFieldPrenomClient" onKeyReleased="#keyReleasedProperty" GridPane.columnIndex="1" GridPane.rowIndex="1" />
@@ -94,12 +120,12 @@
                <children>
                   <Button fx:id="buttonReturn" mnemonicParsing="false" onAction="#clickOnReturn" text="Retour">
                      <FlowPane.margin>
-                        <Insets left="250.0" top="30.0" />
+                        <Insets left="300.0" top="30.0" />
                      </FlowPane.margin>
                   </Button>
                   <Button fx:id="buttonValider" mnemonicParsing="false" onAction="#majLabelAffichage" text="Créer">
                      <FlowPane.margin>
-                        <Insets left="350.0" top="-25.0" />
+                        <Insets left="400.0" top="-25.0" />
                      </FlowPane.margin></Button>
                   <Label fx:id="labelAffichage">
                      <FlowPane.margin>
