--- a/CPOA TD2/src/projet/FXML/ajoutcommande.fxml
+++ b/CPOA TD2/src/projet/FXML/ajoutcommande.fxml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.FlowPane?>
@@ -9,30 +12,57 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="507.0" prefWidth="664.0" xmlns="http://javafx.com/javafx/8.0.202" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="342.0" prefWidth="575.0" xmlns="http://javafx.com/javafx/8.0.202" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <VBox layoutX="-2.0" layoutY="-2.0" prefHeight="507.0" prefWidth="664.0">
+      <VBox layoutX="-2.0" layoutY="-2.0" prefHeight="415.0" prefWidth="581.0">
          <children>
-            <GridPane>
+            <GridPane prefHeight="175.0" prefWidth="581.0">
               <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="294.0" minWidth="10.0" prefWidth="273.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="215.0" minWidth="10.0" prefWidth="170.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <DatePicker GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <ChoiceBox prefWidth="150.0" GridPane.columnIndex="1" />
-                  <ChoiceBox prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <DatePicker fx:id="datePickerCommandedatecommande" GridPane.columnIndex="1" />
+                  <ChoiceBox fx:id="choiceBoxCommandeIdclient" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Label text="Date de la commande">
+                     <GridPane.margin>
+                        <Insets left="100.0" />
+                     </GridPane.margin>
+                  </Label>
+                  <Label text="Client" GridPane.rowIndex="1">
+                     <GridPane.margin>
+                        <Insets left="100.0" />
+                     </GridPane.margin>
+                  </Label>
                </children>
             </GridPane>
-            <FlowPane prefHeight="200.0" prefWidth="200.0" />
+            <FlowPane prefHeight="75.0" prefWidth="581.0">
+               <children>
+                  <Button fx:id="buttonValider" mnemonicParsing="false" onAction="#majLabelAffichage" text="Ajouter">
+                     <FlowPane.margin>
+                        <Insets left="200.0" top="25.0" />
+                     </FlowPane.margin>
+                  </Button>
+                  <Button fx:id="buttonReturn" mnemonicParsing="false" onAction="#clickOnReturn" text="Retour">
+                     <FlowPane.margin>
+                        <Insets left="50.0" top="25.0" />
+                     </FlowPane.margin>
+                  </Button>
+               </children></FlowPane>
+            <FlowPane prefHeight="125.0" prefWidth="581.0">
+               <children>
+                  <Label fx:id="labelAffichage" text="Affichage">
+                     <FlowPane.margin>
+                        <Insets left="250.0" top="25.0" />
+                     </FlowPane.margin>
+                  </Label>
+               </children>
+            </FlowPane>
          </children>
       </VBox>
    </children>
