--- a/CPOA TD2/src/projet/FXML/ajoutproduit.fxml
+++ b/CPOA TD2/src/projet/FXML/ajoutproduit.fxml
@@ -19,9 +19,8 @@
          <children>
             <GridPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="274.0" prefWidth="600.0">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="176.0" minWidth="10.0" prefWidth="71.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="229.0" minWidth="10.0" prefWidth="229.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="260.0" minWidth="10.0" prefWidth="227.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="229.0" minWidth="10.0" prefWidth="173.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
@@ -33,19 +32,19 @@
                <children>
                   <Label text="Nom">
                      <GridPane.margin>
-                        <Insets left="20.0" />
+                        <Insets left="150.0" />
                      </GridPane.margin></Label>
                   <Label text="Description" GridPane.rowIndex="1">
                      <GridPane.margin>
-                        <Insets left="20.0" />
+                        <Insets left="150.0" />
                      </GridPane.margin></Label>
                   <Label text="Tarif" GridPane.rowIndex="2">
                      <GridPane.margin>
-                        <Insets left="20.0" />
+                        <Insets left="150.0" />
                      </GridPane.margin></Label>
                   <Label text="Catégorie" GridPane.rowIndex="3">
                      <GridPane.margin>
-                        <Insets left="20.0" />
+                        <Insets left="150.0" />
                      </GridPane.margin></Label>
                   <TextField fx:id="textFieldNomCateg" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyReleased="#keyReleasedProperty" prefHeight="26.0" prefWidth="170.0" GridPane.columnIndex="1" />
                   <TextField fx:id="textFieldTarifCateg" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyReleased="#keyReleasedProperty" prefHeight="26.0" prefWidth="78.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
@@ -65,7 +64,7 @@
                <children>
                   <Button fx:id="buttonValider" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#majLabelAffichage" prefHeight="25.0" prefWidth="80.0" text="Creer">
                      <FlowPane.margin>
-                        <Insets left="260.0" top="10.0" />
+                        <Insets left="200.0" top="10.0" />
                      </FlowPane.margin>
                   </Button>
                   <Label fx:id="labelAffichage" text="Label d'affichage">
@@ -73,6 +72,11 @@
                         <Insets left="244.0" top="30.0" />
                      </FlowPane.margin>
                   </Label>
+                  <Button fx:id="buttonReturn" mnemonicParsing="false" onAction="#clickOnReturn" text="Retour">
+                     <FlowPane.margin>
+                        <Insets left="325.0" top="-71.0" />
+                     </FlowPane.margin>
+                  </Button>
                </children></FlowPane>
          </children>
       </VBox>
