--- a/CPOA TD2/src/projet/FXML/pageclient.fxml
+++ b/CPOA TD2/src/projet/FXML/pageclient.fxml
@@ -68,7 +68,7 @@
                       <TableColumn fx:id="tableColumnNom" prefWidth="72.0" text="Nom" />
                       <TableColumn fx:id="tableColumnPrenom" prefWidth="88.0" text="Prénom" />
                         <TableColumn fx:id="tableColumnIdentifiant" prefWidth="100.0" text="Identifiant" />
-                        <TableColumn fx:id="tableColumnMdo" prefWidth="116.0" text="Mot de passe" />
+                        <TableColumn fx:id="tableColumnMdp" prefWidth="116.0" text="Mot de passe" />
                         <TableColumn fx:id="tableColumnAdrNum" prefWidth="144.0" text="Numéro de rue" />
                         <TableColumn fx:id="tableColumnAdrVoie" prefWidth="73.0" text="Rue" />
                         <TableColumn fx:id="tableColumnAdrVille" prefWidth="70.0" text="Ville" />
