--- a/CPOA TD2/src/projet/FXML/ajoutcategorie.fxml
+++ b/CPOA TD2/src/projet/FXML/ajoutcategorie.fxml
@@ -44,6 +44,11 @@
                   <Insets left="250.0" />
                </FlowPane.margin>
             </Button>
+            <Button fx:id="buttonReturn" mnemonicParsing="false" onAction="#clickOnReturn" text="Retour">
+               <FlowPane.margin>
+                  <Insets left="50.0" />
+               </FlowPane.margin>
+            </Button>
          </children>
       </FlowPane>
       <FlowPane prefHeight="85.0" prefWidth="600.0">
