--- a/CPOA TD2/src/projet/FXML/editproduit.fxml
+++ b/CPOA TD2/src/projet/FXML/editproduit.fxml
@@ -6,82 +6,79 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="485.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.202" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="projet.controleur.EditProduitController">
    <children>
-      <GridPane prefHeight="456.0" prefWidth="600.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+      <VBox layoutX="1.0" layoutY="1.0" prefHeight="400.0" prefWidth="600.0">
          <children>
-            <Label text="Nom">
-               <GridPane.margin>
-                  <Insets left="75.0" />
-               </GridPane.margin>
-            </Label>
-            <Label text="Description" GridPane.rowIndex="1">
-               <GridPane.margin>
-                  <Insets left="75.0" />
-               </GridPane.margin>
-            </Label>
-            <Label text="Tarif" GridPane.rowIndex="2">
-               <GridPane.margin>
-                  <Insets left="75.0" />
-               </GridPane.margin>
-            </Label>
-            <Label text="Visuel" GridPane.rowIndex="3">
-               <GridPane.margin>
-                  <Insets left="75.0" />
-               </GridPane.margin>
-            </Label>
-            <Label text="Categorie" GridPane.rowIndex="4">
-               <GridPane.margin>
-                  <Insets left="75.0" />
-               </GridPane.margin>
-            </Label>
-            <TextField fx:id="textFieldProduitNom" GridPane.columnIndex="1" />
-            <TextArea fx:id="textAreaProduitDesc" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="textFieldProduitTarif" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField fx:id="textFieldProduitVisuel" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <ChoiceBox fx:id="choiceBoxProduitIdcateg" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <GridPane minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#keyReleasedProperty" onMouseEntered="#keyReleasedProperty" onMouseExited="#keyReleasedProperty" prefHeight="274.0" prefWidth="600.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="260.0" minWidth="10.0" prefWidth="227.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="229.0" minWidth="10.0" prefWidth="173.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label text="Nom">
+                     <GridPane.margin>
+                        <Insets left="150.0" />
+                     </GridPane.margin></Label>
+                  <Label text="Description" GridPane.rowIndex="1">
+                     <GridPane.margin>
+                        <Insets left="150.0" />
+                     </GridPane.margin></Label>
+                  <Label text="Tarif" GridPane.rowIndex="2">
+                     <GridPane.margin>
+                        <Insets left="150.0" />
+                     </GridPane.margin></Label>
+                  <Label text="Catégorie" GridPane.rowIndex="3">
+                     <GridPane.margin>
+                        <Insets left="150.0" />
+                     </GridPane.margin></Label>
+                  <TextField fx:id="textFieldNomProduit" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyReleased="#keyReleasedProperty" prefHeight="26.0" prefWidth="170.0" GridPane.columnIndex="1" />
+                  <TextField fx:id="textFieldTarifProduit" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyReleased="#keyReleasedProperty" prefHeight="26.0" prefWidth="78.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <TextArea fx:id="textAreaDescProduit" onKeyReleased="#keyReleasedProperty" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Label alignment="CENTER" text="euros à l'unité" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                     <GridPane.margin>
+                        <Insets left="100.0" />
+                     </GridPane.margin>
+                  </Label>
+                  <ChoiceBox fx:id="choiceBoxCateg" onMouseClicked="#keyReleasedProperty" onMouseEntered="#keyReleasedProperty" onMouseExited="#keyReleasedProperty" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+               </children>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+            </GridPane>
+            <FlowPane onMouseClicked="#keyReleasedProperty" onMouseEntered="#keyReleasedProperty" onMouseExited="#keyReleasedProperty" orientation="VERTICAL" prefHeight="125.0" prefWidth="600.0">
+               <children>
+                  <Button fx:id="buttonValider" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#majLabelAffichage" prefHeight="25.0" prefWidth="80.0" text="Modifier">
+                     <FlowPane.margin>
+                        <Insets left="200.0" top="10.0" />
+                     </FlowPane.margin>
+                  </Button>
+                  <Label fx:id="labelAffichage">
+                     <FlowPane.margin>
+                        <Insets left="244.0" top="30.0" />
+                     </FlowPane.margin>
+                  </Label>
+                  <Button fx:id="buttonReturn" mnemonicParsing="false" onAction="#clickOnReturn" text="Retour">
+                     <FlowPane.margin>
+                        <Insets left="325.0" top="-71.0" />
+                     </FlowPane.margin>
+                  </Button>
+               </children></FlowPane>
          </children>
-      </GridPane>
-      <FlowPane prefHeight="200.0" prefWidth="200.0">
-         <children>
-            <Button fx:id="buttonProduitUpdate" mnemonicParsing="false" onAction="#majLabelAffichage" text="Modifier">
-               <FlowPane.margin>
-                  <Insets left="200.0" top="20.0" />
-               </FlowPane.margin>
-            </Button>
-            <Button fx:id="buttonReturn" mnemonicParsing="false" onAction="#clickOnReturn" text="Retour">
-               <FlowPane.margin>
-                  <Insets left="50.0" top="20.0" />
-               </FlowPane.margin>
-            </Button>
-         </children>
-      </FlowPane>
-      <FlowPane prefHeight="209.0" prefWidth="600.0">
-         <children>
-            <Label fx:id="labelProduitAffichage" text="Affichage">
-               <FlowPane.margin>
-                  <Insets left="250.0" top="20.0" />
-               </FlowPane.margin>
-            </Label>
-         </children>
-      </FlowPane>
+      </VBox>
    </children>
-</VBox>
+</AnchorPane>
