--- a/CPOA TD2/src/projet/FXML/main.fxml
+++ b/CPOA TD2/src/projet/FXML/main.fxml
@@ -25,7 +25,7 @@
          <children>
             <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#clickOnClient" text="Client" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#clickOnCategorie" text="Categorie" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Commande" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+            <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#clickOnCommande" text="Commande" GridPane.columnIndex="3" GridPane.rowIndex="1" />
             <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#clickOnProduit" text="Produit" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <Button fx:id="buttonLigneCommande" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#clickOnLigneCommande" text="Ligne commande" GridPane.columnIndex="3" GridPane.rowIndex="2" />
          </children>
