--- a/CPOA TD2/src/projet/FXML/pagecommande.fxml
+++ b/CPOA TD2/src/projet/FXML/pagecommande.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
@@ -65,6 +66,11 @@
                <children>
                   <FlowPane prefHeight="87.0" prefWidth="841.0">
                      <children>
+                        <Label text="Selection de la commande :">
+                           <FlowPane.margin>
+                              <Insets left="30.0" top="30.0" />
+                           </FlowPane.margin>
+                        </Label>
                         <ChoiceBox fx:id="choiceBoxCommande" prefWidth="150.0">
                            <FlowPane.margin>
                               <Insets left="30.0" top="30.0" />
