--- a/CPOA TD2/src/projet/FXML/editlignecommande.fxml
+++ b/CPOA TD2/src/projet/FXML/editlignecommande.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.202" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="projet.controleur.EditLigneCommandeController">
    <children>
       <GridPane prefHeight="301.0" prefWidth="600.0">
         <columnConstraints>
@@ -28,18 +28,15 @@
                   <Insets left="75.0" />
                </GridPane.margin>
             </Label>
-            <Label text="Tarif" GridPane.rowIndex="1">
-               <GridPane.margin>
-                  <Insets left="75.0" />
-               </GridPane.margin>
-            </Label>
-            <TextField fx:id="textFieldLigneCommandeQuantite" GridPane.columnIndex="1" />
-            <TextField fx:id="textFieldLigneCommandeTarif" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="textFieldLigneCommandeQuantite" onKeyReleased="#keyReleasedProperty" GridPane.columnIndex="1" />
          </children>
+         <VBox.margin>
+            <Insets top="50.0" />
+         </VBox.margin>
       </GridPane>
       <FlowPane prefHeight="200.0" prefWidth="200.0">
          <children>
-            <Button fx:id="buttonLigneCommandeUpdate" mnemonicParsing="false" onAction="#majLabelAffichage" text="Modifier">
+            <Button fx:id="buttonValider" mnemonicParsing="false" onAction="#majLabelAffichage" text="Modifier">
                <FlowPane.margin>
                   <Insets left="200.0" top="40.0" />
                </FlowPane.margin>
