--- a/CPOA TD2/src/projet/FXML/pageclient.fxml
+++ b/CPOA TD2/src/projet/FXML/pageclient.fxml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -16,7 +13,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="641.0" prefWidth="986.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="projet.controleur.PageClientController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="641.0" prefWidth="986.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="projet.controleur.PageClientController">
    <children>
       <HBox layoutX="-5.0" layoutY="-5.0" prefHeight="649.0" prefWidth="991.0">
          <children>
@@ -67,7 +64,19 @@
             </VBox>
             <VBox prefHeight="649.0" prefWidth="841.0">
                <children>
-                  <FlowPane prefHeight="87.0" prefWidth="841.0" />
+                  <FlowPane prefHeight="87.0" prefWidth="841.0">
+                     <children>
+                        <Label text="Recherche :">
+                           <FlowPane.margin>
+                              <Insets left="30.0" top="30.0" />
+                           </FlowPane.margin>
+                        </Label>
+                        <TextField fx:id="textFieldFiltreNom" onKeyReleased="#filtrageNom" promptText="Nom">
+                           <FlowPane.margin>
+                              <Insets left="30.0" top="30.0" />
+                           </FlowPane.margin>
+                        </TextField>
+                     </children></FlowPane>
                   <TableView fx:id="tableViewClient" onMouseClicked="#clickOnTable" prefHeight="559.0" prefWidth="841.0">
                     <columns>
                       <TableColumn fx:id="tableColumnNom" prefWidth="72.0" text="Nom" />
