--- a/CPOA TD2/src/projet/FXML/pagecommande.fxml
+++ b/CPOA TD2/src/projet/FXML/pagecommande.fxml
@@ -2,10 +2,10 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -66,24 +66,25 @@
                <children>
                   <FlowPane prefHeight="87.0" prefWidth="841.0">
                      <children>
-                        <Label text="Selection de la commande :">
+                        <Label text="Recherche :">
                            <FlowPane.margin>
                               <Insets left="30.0" top="30.0" />
                            </FlowPane.margin>
                         </Label>
-                        <ChoiceBox fx:id="choiceBoxCommande" prefWidth="150.0">
+                        <TextField fx:id="textFieldFiltreCommande" onKeyReleased="#filtrageLigneCommande" promptText="Numéro de commande">
                            <FlowPane.margin>
                               <Insets left="30.0" top="30.0" />
                            </FlowPane.margin>
-                        </ChoiceBox>
+                        </TextField>
                      </children></FlowPane>
                   <HBox prefHeight="557.0" prefWidth="841.0">
                      <children>
-                        <TableView fx:id="tableViewLigneCommande" prefHeight="557.0" prefWidth="841.0">
+                        <TableView fx:id="tableViewLigneCommande" onMouseClicked="#clickOnTable" prefHeight="557.0" prefWidth="841.0">
                           <columns>
-                              <TableColumn fx:id="tableColumnProduit" prefWidth="270.0" text="Produit" />
-                            <TableColumn fx:id="tableColumnQuantite" prefWidth="303.0" text="Quantite" />
-                            <TableColumn fx:id="tableColumnTarif" prefWidth="266.0" text="Tarif" />
+                              <TableColumn fx:id="tableColumnCommande" prefWidth="186.0" text="Commande" />
+                              <TableColumn fx:id="tableColumnProduit" prefWidth="211.0" text="Produit" />
+                            <TableColumn fx:id="tableColumnQuantite" prefWidth="224.0" text="Quantite" />
+                            <TableColumn fx:id="tableColumnTarif" prefWidth="219.0" text="Tarif" />
                           </columns>
                         </TableView>
                      </children>
