--- a/CPOA TD2/src/projet/FXML/pageclient.fxml
+++ b/CPOA TD2/src/projet/FXML/pageclient.fxml
@@ -79,16 +79,19 @@
                      </children></FlowPane>
                   <TableView fx:id="tableViewClient" onMouseClicked="#clickOnTable" prefHeight="559.0" prefWidth="841.0">
                     <columns>
-                      <TableColumn fx:id="tableColumnNom" prefWidth="72.0" text="Nom" />
-                      <TableColumn fx:id="tableColumnPrenom" prefWidth="88.0" text="Prénom" />
-                        <TableColumn fx:id="tableColumnIdentifiant" prefWidth="100.0" text="Identifiant" />
-                        <TableColumn fx:id="tableColumnMdp" prefWidth="116.0" text="Mot de passe" />
-                        <TableColumn fx:id="tableColumnAdrNum" prefWidth="144.0" text="Numéro de rue" />
-                        <TableColumn fx:id="tableColumnAdrVoie" prefWidth="73.0" text="Rue" />
+                      <TableColumn fx:id="tableColumnNom" prefWidth="79.0" text="Nom" />
+                      <TableColumn fx:id="tableColumnPrenom" editable="false" prefWidth="81.0" sortable="false" text="Prénom" />
+                        <TableColumn fx:id="tableColumnIdentifiant" editable="false" prefWidth="100.0" sortable="false" text="Identifiant" />
+                        <TableColumn fx:id="tableColumnMdp" editable="false" prefWidth="116.0" sortable="false" text="Mot de passe" />
+                        <TableColumn fx:id="tableColumnAdrNum" editable="false" prefWidth="144.0" sortable="false" text="Numéro de rue" />
+                        <TableColumn fx:id="tableColumnAdrVoie" editable="false" prefWidth="73.0" sortable="false" text="Rue" />
                         <TableColumn fx:id="tableColumnAdrVille" prefWidth="70.0" text="Ville" />
-                        <TableColumn fx:id="tableColumnCodePostal" prefWidth="98.0" text="Code Postal" />
-                        <TableColumn fx:id="tableColumnPays" prefWidth="76.0" text="Pays" />
+                        <TableColumn fx:id="tableColumnCodePostal" editable="false" prefWidth="98.0" sortable="false" text="Code Postal" />
+                        <TableColumn fx:id="tableColumnPays" editable="false" prefWidth="76.0" sortable="false" text="Pays" />
                     </columns>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
                   </TableView>
                </children>
             </VBox>
