--- a/CPOA TD2/src/projet/FXML/pagecommande.fxml
+++ b/CPOA TD2/src/projet/FXML/pagecommande.fxml
@@ -76,6 +76,11 @@
                               <Insets left="30.0" top="30.0" />
                            </FlowPane.margin>
                         </TextField>
+                        <Button fx:id="buttonCommande" mnemonicParsing="false" onAction="#clickForCommand" text="Afficher les commande">
+                           <FlowPane.margin>
+                              <Insets left="50.0" top="30.0" />
+                           </FlowPane.margin>
+                        </Button>
                      </children></FlowPane>
                   <HBox prefHeight="557.0" prefWidth="841.0">
                      <children>
